Ensure adequate spacing below tables. Fixes #141.

--- a/styles/layout-default.less
+++ b/styles/layout-default.less
@@ -126,6 +126,7 @@ ul, ol {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+  margin-bottom: @padding;
 
   tr:nth-child(2n) {
     background-color: darken(@group-background-color, 2%);
